--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">WeatherApp</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
     <string name="no_data">No data</string>
+    <string name="no_internet">Please connect to internet and try again later.</string>
+    <string name="error_occurred">Error occurred. Please try again later.</string>
 </resources>
